- Fixed bug #48994 (zlib.output_compression does not ouput HTTP headers when set to a string value) # also fixes bug #35936 (ini.zlib.output-compression Documentation :)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/branches/PHP_5_3@286751 c90b9560-bf6c-de11-be94-00142212c4b1